# spec-driven-full-stack-todo-web-app_Phase-II

./: .gitignore  CLAUDE.md  test_verification_report.md
backend/: .gitignore  DOCUMENTATION.md  INTEGRATION_TEST_REPORT.md  README.md  alembic.ini  conftest.py  database_indexes.md  dev-requirements.txt  integration_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_basic.py  test_database_config.py  test_final_verification.py  test_todo_app.db
backend/alembic/: env.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 31e4a2b47e9e_initial_migration_for_user_and_task_.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  deps.py
backend/src/config/: database.py  settings.py
backend/src/db/: session.py
backend/src/middleware/: auth.py  auth_middleware.py  cors_middleware.py  https_redirect_middleware.py  logging_middleware.py  rate_limiter.py
backend/src/models/: __init__.py  auth_token.py  task.py  user.py
backend/src/routers/: tasks.py
backend/src/schemas/: auth.py  base.py  task.py  user.py
backend/src/services/: auth_service.py  cache_service.py  notification_service.py  task_service.py  user_service.py
backend/src/utils/: exceptions.py  hashing.py  jwt.py  jwt_utils.py
backend/tests/: test_api_integration.py  test_cache_service.py  test_logging_middleware.py  test_main.py  test_notification_service.py  test_openapi_contract.py  test_rate_limiting.py  test_task_completion.py  test_task_completion_endpoint.py  test_task_service.py  test_user_service.py
(+131 files in other folders)
